kubernetes/apps/media/arr/prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    name: prowlarr
  ports:
    - protocol: TCP
      port: 9696
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 0
  selector:
    matchLabels:
      name: prowlarr
  template:
    metadata:
      labels:
        name: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: hotio/prowlarr:release-1.30.2.4939
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 1000m
              memory: 300Mi
      volumes:
        - name: config
          hostPath:
            path: /home/player/kube_data/prowlarr
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: saka
