kubernetes/apps/media/arr/radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    name: radarr
  ports:
    - protocol: TCP
      port: 7878
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: radarr
  template:
    metadata:
      labels:
        name: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrent-downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 1000m
              memory: 300Mi
      volumes:
        - name: config
          hostPath:
            path: /home/player/kube_data/radarr
            type: Directory
        - name: torrent-downloads
          persistentVolumeClaim:
            claimName: torrent-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
      nodeSelector:
        kubernetes.io/hostname: saka
