kubernetes/apps/media/arr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.${HOMELAB_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: radarr
                port:
                  number: 7878
    - host: sonarr.${HOMELAB_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
    - host: prowlarr.${HOMELAB_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
